Revision history for SPVM

0.9021  2021-12-24
        [CHANGES]
        * Reference symbol is changed from & to *.

0.9020  2021-12-23
        [CHANGES]
        * Remove Windows library searching path from ldflags of SPVM::Builder::Config
        * Add exported_funcs field and add_exported_funcs method to SPVM::Builder::Config, and add the logic of adding exported functions.
        * Add get_src_dir, get_include_dir, get_lib_dir to SPVM::Builder::Config.
        * Create static library for SPVM natvie module
        * Static resource is linked instead of dynamic resource.
        * Remove function call syntax and function import syntax. You don't call static method without full qualified name.
          This is because SPVM after version 1.0 want to keep backword compatible when new keywords is added.
        * Add current package syntax "cur"
          You can call the class method using "cur" keyword
          class Foo {
            
            static method test : void () {
              # This means Foo->sum(1, 2)
              my $ret = cur->sum(1, 2);
            }

            static method sum : int ($num1 : int, $num2 : int) {
              return $num1 + $num2;
            }
          }
        * Add class alias syntax
          use Foo::Bar::Baz as FBB;
          
          FBB->new;
          
0.9019  2021-12-21
        [CHANGES]
        * Rename SPVM::Builder::Config's get_libs, set_libs, unshift_libs, push_libs method to get_runtime_libs, set_runtime_libs, unshift_runtime_libs, push_runtime_libs
          and don't add libraries to linker flags of linker.
        * remove SPVM::Builder::Exe and spvmcc command again because one executable that is portable and work correctly without function conflicts is impossible after long thinking.
          The implementation before removing is saved at the following branch.
          
          https://github.com/yuki-kimoto/SPVM/releases/tag/before_remove_exe_20211216
        